--- a/edvora-homepage/styles/globals.css
+++ b/edvora-homepage/styles/globals.css
@@ -34,13 +34,14 @@ html, body {
 }
 .dataproductName{
   color: #ffffff;
-  font-size: 100%;
-  margin: 5% ;
-  
+  font-size: 130%;
+  padding: 2px;
 }
 .restofdataproductName{
   color:rgba(255, 255, 255, 0.6);
-  font-size: 100%;
-  margin: 5% ;
+  font-size: 120%;
+  padding: 2px;
+  margin: 2px;
   
 }
+
